# zodiakos

./: Cargo.toml  DOCUMENTATION.md  README.md  README.mdgit  build_errors.txt  zodiakos.long-type-1897995788855093423.txt
src/: blom.rs  main.rs  main_backup.rs  main_backup_bevy014.rs  main_colonization.rs  main_new.rs  mesh2d_manual.rs
